all migrations for testing done, openapi.yml file complete
